# qommunicator

./: .gitignore  .pylintrc  AUTHORS  ChangeLog  Dockerfile  README.md  requirements.txt  setup.cfg  tox.ini
qommunicator/: RemoteClient.py  __init__.py  config.py  qommunicator.py  utils.py
qommunicator/templates/: qsub_job.submit.j2
tests/: __init__.py
